# Sol-Dev-goal-6-to-9-Month-Sprint

./: README.md
10_12_2025/option_result/src/: main.rs
10_12_2025/ownership_borrowing/src/: main.rs
11_12_2025/option_result/src/: main.rs
11_12_2025/struct_build/src/: main.rs
12_12_2025/ownership_borrowing/src/: main.rs
12_12_2025/struct_build/src/: main.rs
19_12_2025/mastered_the_entrypoint/: Cargo.toml
19_12_2025/mastered_the_entrypoint/src/: lib.rs
1_12_2026_🦀/: readme.md
1_15_2026/: readme.md
1_15_2026/validation_security/: Anchor.toml
1_16_2026/: readme.md
1_16_2026/validation_security/: Anchor.toml
1_16_2026/validation_security/tests/: validation_security.ts
1_18_2026/: readme.md
1_18_2026/account_type/: Cargo.toml
1_18_2026/account_type/src/: main.rs
1_1_2026/: readme.md
1_1_2026/anchor_boileplate/: Anchor.toml
1_6_2026/anchor_boileplate/: Anchor.toml
1_6_2026/anchor_boileplate/tests/: anchor_boileplate.ts
22_12_2025/mastered_the_entrypoint/: Cargo.toml
22_12_2025/mastered_the_entrypoint/src/: lib.rs
23_12_2025/: readme
23_12_2025/mastered_the_entrypoint/: Cargo.toml
23_12_2025/mastered_the_entrypoint/src/: lib.rs
24_12_2025/mastered_the_entrypoint/src/: lib.rs
25_12_2025/mastered_the_entrypoint/src/: lib.rs
26_12_2025/mastered_the_entrypoint/src/: lib.rs
29_12_2025/: readme.md
30_12_2025/: readme.md
30_12_2025/anchor__boileplate/: Anchor.toml
3_12_2025/struct_build/src/: main.rs
6_12_2025/ownership_borrowing/: Cargo.toml
7_12_2025/option_result/: Cargo.toml
8_12_2025/struct_build/: Cargo.toml
(+26 files in other folders)
